# libcos

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  library.json  platformio.ini
.github/ISSUE_TEMPLATE/: bug_report.md
include/: assert.h
include/libcos/: _sizes.h  alignment.h  array.h  atomic.h  atomic_spinlock.h  complex.h  cstddef.h  ctype.h  deque.h  elf.h  endian.h  errno.h  float.h  getopt.h  hash.h  ieeefp.h  inttypes.h  iob.h  iso646.h  klibcos.h  langinfo.h  limits.h  list.h  locale.h  lock.h  malloc.h  math.h  mmalloc.h  mutex.h  node.h  pair.h  priority_deque.h  queue.h  rand.h  ringbuffer.h  setjmp.h  sleep.h  sort.h  stack.h  stdalign.h  (+20 more)
include/libcos/crypt/: adler32.h  crc.h  crypt.h
include/libcos/hash/: adler32.h  crc.h
include/libcos/private/: libconfig.h  libgcc.h  port.h
include/libcos/sys/: dirent.h  utsname.h
include/libcos/utils/: atomic_counter.h  atomic_spinlock.h  error.h  event_synce.h  mutex.h  schedular.h  task.h
src/: alignment.c  array.c  assert.c  atomic_spinlock.c  complex.c  ctype.c  deque.c  errno.c  getopt.c  getopt_long.c  langinfo.c  libgcc.c  list.c  malloc.c  math_exp.c  math_misc.c  math_pow.c  math_trigo.c  memclr.c  mutex.c  node.c  pair.c  priority_deque.c  queue.c  ringbuffer.c  sleep.c  sort.c  sprintf.c  sqrtf.c  stdatomic.c  stdio.c  stdlib.c  storage.c  string.c  task.c  tgmath.c  time.c  typeconv.c  uuid.c  wchar.c  (+1 more)
src/arch/aarch64/: longjmp.s  port.c  setjmp.s
src/arch/arm/: longjmp.s  port.c  setjmp.s
src/arch/i386/: longjmp.s  port.c  setjmp.s
src/arch/user/: port.c
src/arch/x86_64/: port.c  setjmp.s
src/crypt/: adler32.c  crc.c
src/hash/: adler32.c  crc.c
src/port/: port.c
src/stdlib/: bsearch.c  qsort.c  sorts.c  stdlib.c  strtod.c  strtof.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
src/sys/: dirent.c  utsname.c
src/utils/: atomic_counter.c  atomic_spinlock.c  event_synce.c  mutex.c  task.c
src/vmath/: quaternion.c  vector2.c  vector3.c  vector4.c
